--- a/thankyou.html
+++ b/thankyou.html
@@ -1,3 +1,7 @@
+<html>
+<head>
+    <title>Thank you!</title>
+</head>
 <body id="body">
 </body>
 <script>
@@ -19,3 +23,4 @@ document.getElementById('body').appendChild(img);
 
 
 </script>
+</html>
